# chrome-password-reader

./: .gitignore  CMakeLists.txt  PassReaderExample.cpp  README.md  appveyor.yml  chrome-password-reader.pro  chromePassReader.pro  chrome_pass_console.pro  main.cpp  passReader.cpp  passReader.h
